<?xml version="1.0"?>
<package>
  <name>mas_simulation</name>
  <version>1.2.0</version>
  <description>The mas_simulation meta package</description>

  <author email="matthias.fueller@h-brs.de">Matthias Füller</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/> -->
  </export>
</package>
